commit oauth sample request
 commit oauth sample request

--- a/RestAPI/test-output/index.html
+++ b/RestAPI/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Shagun Sinha\AppData\Local\Temp\testng-eclipse-829605687\testng-customsuite.xml</span>
+                    <span>C:\Users\Shagun Sinha\AppData\Local\Temp\testng-eclipse-252943109\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SumValidation" class="method navigator-link" hash-for-method="PrintAllCourseTitleAndPrices">PrintAllCourseTitleAndPrices</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(book1, 121212)">addBook(book1, 121212)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SumValidation" class="method navigator-link" hash-for-method="PrintNoOfCopies">PrintNoOfCopies</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(book4, 767676)">addBook(book4, 767676)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SumValidation" class="method navigator-link" hash-for-method="SumOfCourses">SumOfCourses</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(book2, 32323)">addBook(book2, 32323)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(book3, 43435)">addBook(book3, 43435)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,28 +136,39 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">SumValidation</span>
+              <span class="class-name">files.DynamicJson</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="PrintAllCourseTitleAndPrices">
-                  </a> <!-- PrintAllCourseTitleAndPrices -->
-                  <span class="method-name">PrintAllCourseTitleAndPrices</span>
+                  <a name="addBook(book1, 121212)">
+                  </a> <!-- addBook(book1, 121212) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(book1,121212)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="PrintNoOfCopies">
-                  </a> <!-- PrintNoOfCopies -->
-                  <span class="method-name">PrintNoOfCopies</span>
+                  <a name="addBook(book4, 767676)">
+                  </a> <!-- addBook(book4, 767676) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(book4,767676)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="SumOfCourses">
-                  </a> <!-- SumOfCourses -->
-                  <span class="method-name">SumOfCourses</span>
+                  <a name="addBook(book2, 32323)">
+                  </a> <!-- addBook(book2, 32323) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(book2,32323)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(book3, 43435)">
+                  </a> <!-- addBook(book3, 43435) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(book3,43435)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -160,7 +176,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Shagun Sinha\AppData\Local\Temp\testng-eclipse-829605687\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Shagun Sinha\AppData\Local\Temp\testng-eclipse-252943109\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,7 +185,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;SumValidation&quot;/&gt;
+      &lt;class name=&quot;files.DynamicJson&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -209,24 +225,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'PrintAllCourseTitleAndPrices')
-data.setCell(0, 2, 'SumValidation')
-data.setCell(0, 3, 269);
+data.setCell(0, 1, 'addBook')
+data.setCell(0, 2, 'files.DynamicJson')
+data.setCell(0, 3, 3924);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'SumOfCourses')
-data.setCell(1, 2, 'SumValidation')
-data.setCell(1, 3, 164);
+data.setCell(1, 1, 'addBook')
+data.setCell(1, 2, 'files.DynamicJson')
+data.setCell(1, 3, 185);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'PrintNoOfCopies')
-data.setCell(2, 2, 'SumValidation')
-data.setCell(2, 3, 125);
+data.setCell(2, 1, 'addBook')
+data.setCell(2, 2, 'files.DynamicJson')
+data.setCell(2, 3, 162);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'addBook')
+data.setCell(3, 2, 'files.DynamicJson')
+data.setCell(3, 3, 154);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 558 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -252,18 +272,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">SumValidation</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">files.DynamicJson</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">PrintAllCourseTitleAndPrices</span>
+                <span class="method-name">addBook(book1, 121212)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">PrintNoOfCopies</span>
-                <span class="method-start">274 ms</span>
+                <span class="method-name">addBook(book2, 32323)</span>
+                <span class="method-start">3934 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">SumOfCourses</span>
-                <span class="method-start">404 ms</span>
+                <span class="method-name">addBook(book3, 43435)</span>
+                <span class="method-start">4094 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(book4, 767676)</span>
+                <span class="method-start">4282 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
