--- a/RestAPI/test-output/emailable-report.html
+++ b/RestAPI/test-output/emailable-report.html
@@ -9,12 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">630</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,516</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">SumValidation</td><td><a href="#m0">PrintAllCourseTitleAndPrices</a></td><td rowspan="1">1730539263276</td><td rowspan="1">269</td></tr><tr class="passedeven"><td><a href="#m1">PrintNoOfCopies</a></td><td rowspan="1">1730539263550</td><td rowspan="1">125</td></tr><tr class="passedeven"><td><a href="#m2">SumOfCourses</a></td><td rowspan="1">1730539263680</td><td rowspan="1">164</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">files.DynamicJson</td><td><a href="#m0">addBook</a></td><td rowspan="4">1730544905957</td><td rowspan="4">3924</td></tr><tr class="passedeven"><td><a href="#m1">addBook</a></td></tr><tr class="passedeven"><td><a href="#m2">addBook</a></td></tr><tr class="passedeven"><td><a href="#m3">addBook</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">SumValidation#PrintAllCourseTitleAndPrices</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">SumValidation#PrintNoOfCopies</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">SumValidation#SumOfCourses</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">files.DynamicJson#addBook</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>book1</td><td>121212</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">files.DynamicJson#addBook</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>book4</td><td>767676</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">files.DynamicJson#addBook</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>book2</td><td>32323</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">files.DynamicJson#addBook</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>book3</td><td>43435</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
